fix overflow

--- a/index.css
+++ b/index.css
@@ -12,6 +12,7 @@
 
 body {
     user-select: none;
+    overflow: hidden;
 }
 
 .age {
